# memloom

./: .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
config/: collector.hz.example.yaml  collector.lab101.example.yaml  collector.mac.example.yaml  collector.yaml.example  memloom.yaml  memloom.yaml.example  memory-pipeline.yaml.example
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AuthGate.tsx  Shell.tsx  StatusLine.tsx
dashboard/src/lib/: api.ts  format.ts
dashboard/src/pages/: Explorer.tsx  Overview.tsx  Pipeline.tsx  Settings.tsx
docs/: collector.md  dashboard.md  ingest-api.md
docs/superpowers/plans/: 2026-07-19-memloom-dashboard.md
docs/superpowers/specs/: 2026-07-19-hub-collector-design.md  2026-07-19-memloom-dashboard-design.md
memloom/: __init__.py  auth_keys.py  cli.py  config.py  embed.py  ingest_server.py  ops.py  quarantine.py  records.py  runner.py
memloom/admin/: __init__.py  auth.py  router.py  settings.py  state.py  static.py
memloom/collector/: __init__.py  cli.py  config.py  registry.py  run.py
memloom/collectors/: __init__.py  claude_code.py  generic_jsonl.py  librechat.py  openclaw_sessions.py
memloom/pipeline/: __init__.py  builtins.py  chunk.py  dedup.py  denoise.py  step.py
memloom/store/: __init__.py  raw.py
memloom/sync/: __init__.py  adapter.py  antigravity.py  cli.py  codex.py  config.py  hermes.py  kilocode.py  librechat.py  openclaw_chat.py  openclaw_session.py  openclaw_workspace.py  opencode.py  qoder.py
memloom/transport/: __init__.py  local.py
memloom/vector/: __init__.py
memory_pipeline/: cli.py  config.py  runner.py
memory_pipeline/collectors/: __init__.py  base.py  codex.py  openclaw.py
memory_pipeline/pipeline/: __init__.py  privacy.py  tag.py
memory_pipeline/store/: raw.py
memory_pipeline/transport/: base.py  ssh.py
memory_pipeline/vector/: anythingllm.py
scripts/: install-cron.sh  install-hooks.sh  validate-commit-msg.py
tests/: conftest.py  test_admin_api.py  test_auth_keys.py  test_chunker.py  test_collector.py  test_collectors.py  test_denoise.py  test_hybrid.py  test_ingest_server.py  test_librechat.py  test_privacy.py  test_quarantine.py  test_records.py  test_runner.py  test_store.py  test_sync.py  test_transport.py  test_vector.py
