[project]
name = "memory-pipeline"
version = "0.1.0"
description = "Unified agent memory collection pipeline — local + SSH, pluggable adapters, raw-preserving data lake."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Beta" },
    { name = "mico", email = "mico@pbeta.me" },
]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fabric>=3.2",          # SSH transport (paramiko under the hood)
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
mp = "memory_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_pipeline"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["B007", "B017"]  # loop vars (wm, _); blind exception in test paths

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]