[project]
name = "memloom"
version = "0.9.0"
description = "Weave your agents' memories into one searchable fabric — local-first, pluggable, raw-preserving."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Beta" },
    { name = "mico", email = "mico@pbeta.me" },
]
license = { text = "MIT" }
keywords = ["ai", "agents", "memory", "rag", "llm", "anythingllm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fabric>=3.2",
    "python-dateutil>=2.9",
    "requests>=2.31",
    "sqlite-vec>=0.1.0",
    "pymongo>=4.17.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
memloom = "memloom.cli:app"

[project.urls]
Homepage = "https://github.com/atbeta/memloom"
Repository = "https://github.com/atbeta/memloom"
Issues = "https://github.com/atbeta/memloom/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include SPA build output even when gitignored (CI runs `npm run build` first).
artifacts = [
  "memloom/admin/static/**",
]

[tool.hatch.build.targets.wheel]
packages = ["memloom"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["B007", "B017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
